--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@
 .env.test.local
 .env.production.local
 
+.netlify
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env
+
+try.html
+try2.html
